# miden-node

./: .gitignore  .release-plz.toml  CHANGELOG.md  CONTRIBUTING.md  Cargo.toml  Makefile  README.md
.github/ISSUE_TEMPLATE/: 1-bugreport.yml  2-feature-request.yml  3-task.yml
.github/actions/build_package/: action.yml
.github/actions/debian/: action.yml
.github/workflows/: build-docker.yml  crates-check.yml  deploy.yml  dev.yml  docker-build-check.yml  lint.yml  miden.yml  package.yml  publish-debian-all.yml  publish-debian-faucet.yml  publish-debian-node.yml  publish-debian-prover-proxy.yml  publish-debian-prover.yml  publish-debian.yml  publish-docker.yml  publish.yml  release-plz-dry-run.yml  release-plz.yml  test-beta.yml  test-ssh.yml
crates/block-producer/: Cargo.toml
crates/block-producer/src/: errors.rs  lib.rs  server.rs
crates/block-producer/src/batch_builder/: batch.rs  mod.rs
crates/block-producer/src/block_builder/: mod.rs
crates/block-producer/src/block_builder/prover/: tests.rs
crates/block-producer/src/domain/: transaction.rs
crates/block-producer/src/mempool/: batch_graph.rs  mod.rs  subscription.rs  tests.rs  transaction_graph.rs
crates/block-producer/src/mempool/graph/: mod.rs
crates/block-producer/src/mempool/inflight_state/: mod.rs
crates/block-producer/src/server/: mod.rs  tests.rs
crates/block-producer/src/store/: mod.rs
crates/block-producer/src/test_utils/: account.rs  batch.rs  block.rs  mod.rs  note.rs  proven_tx.rs  store.rs
crates/ntx-builder/: Cargo.toml  README.md
crates/ntx-builder/src/: block_producer.rs  lib.rs  store.rs  transaction.rs
crates/ntx-builder/src/builder/: block_producer.rs  mod.rs  prover.rs  store.rs
crates/ntx-builder/src/builder/data_store/: account_cache.rs  mod.rs
crates/ntx-builder/src/builder/server/: mod.rs  state.rs
crates/ntx-builder/src/state/: account.rs  mod.rs
crates/proto/: Cargo.toml  build.rs
crates/proto/src/: errors.rs  lib.rs
crates/proto/src/domain/: account.rs  batch.rs  block.rs  mempool.rs  mod.rs  note.rs
crates/proto/src/ntx_builder/: mod.rs
crates/proving-service-client/: Cargo.toml  build.rs
crates/proving-service-client/src/: lib.rs
crates/proving-service-client/src/proving_service/: batch_prover.rs  block_prover.rs  tx_prover.rs
crates/remote-prover-client/: Cargo.toml  README.md  build.rs
crates/remote-prover-client/src/: lib.rs
crates/remote-prover-client/src/remote_prover/: batch_prover.rs  block_prover.rs  mod.rs  tx_prover.rs
crates/rpc/: Cargo.toml
crates/rpc-proto/: build.rs
crates/rpc-proto/proto/: account.proto  responses.proto
crates/rpc/src/: lib.rs  tests.rs
crates/rpc/src/client/: api.rs  interceptor.rs  mod.rs
crates/rpc/src/server/: accept.rs  api.rs  mod.rs
crates/store/: Cargo.toml
crates/store/src/: errors.rs  genesis.rs  lib.rs  state.rs
crates/store/src/db/: migrations.rs  mod.rs  tests.rs
crates/store/src/db/migrations/: 001-init.sql
crates/store/src/db/sql/: mod.rs
crates/store/src/genesis/: mod.rs
crates/store/src/genesis/config/: errors.rs  mod.rs  tests.rs
crates/store/src/genesis/config/samples/: 01-simple.toml
crates/store/src/server/: api.rs  block_producer.rs  mod.rs  ntx_builder.rs  rpc_api.rs
crates/test-macro/: Cargo.toml
crates/test-macro/src/: lib.rs
crates/utils/: Cargo.toml
crates/utils/src/: account.rs  config.rs  cors.rs  errors.rs  formatting.rs  grpc.rs  lib.rs  limiter.rs  logging.rs
crates/utils/src/tracing/: grpc.rs  span_ext.rs
docs/src/developer/: codebase.md  rpc.md
docs/src/operator/: installation.md  monitoring.md  usage.md
docs/src/user/: rpc.md
packaging/faucet/: miden-faucet.service  postinst
packaging/miden-faucet/: postinst  postrm
packaging/node/: miden-node.service  postinst  postrm
packaging/prover/: miden-prover.service  postinst  postrm
packaging/prover-proxy/: miden-prover-proxy.service  postinst  postrm
proto/: Cargo.toml  build.rs  requests.proto  store.proto
proto/proto/: block_producer.proto  note.proto  ntx_builder.proto  proxy_status.proto  remote_prover.proto  requests.proto  responses.proto  rpc.proto  store.proto  transaction.proto
proto/src/: lib.rs
scripts/: publish-crates.sh
