[package]
authors.workspace      = true
description            = "Miden node's block producer component"
edition.workspace      = true
homepage.workspace     = true
keywords               = ["block-producer", "miden", "node"]
license.workspace      = true
name                   = "miden-node-block-producer"
readme                 = "README.md"
repository.workspace   = true
rust-version.workspace = true
version.workspace      = true

[lints]
workspace = true

[features]
testing        = []
tracing-forest = ["miden-node-utils/tracing-forest"]

[dependencies]
anyhow                       = { workspace = true }
futures                      = { version = "0.3" }
itertools                    = { workspace = true }
miden-block-prover           = { version = "0.9" }
miden-lib                    = { workspace = true }
miden-node-proto             = { workspace = true }
miden-node-utils             = { features = ["testing"], workspace = true }
miden-objects                = { workspace = true }
miden-processor              = { workspace = true }
miden-proving-service-client = { features = ["batch-prover", "block-prover"], version = "0.9" }
miden-tx                     = { workspace = true }
miden-tx-batch-prover        = { version = "0.9" }
rand                         = { version = "0.9" }
thiserror                    = { workspace = true }
tokio                        = { features = ["macros", "net", "rt-multi-thread", "sync", "time"], workspace = true }
tokio-stream                 = { features = ["net"], workspace = true }
tonic                        = { features = ["transport"], workspace = true }
tower-http                   = { features = ["util"], workspace = true }
tracing                      = { workspace = true }
url                          = { workspace = true }

[dev-dependencies]
assert_matches        = { workspace = true }
miden-air             = { workspace = true }
miden-lib             = { features = ["testing"], workspace = true }
miden-node-store      = { workspace = true }
miden-node-test-macro = { workspace = true }
miden-node-utils      = { features = ["testing"], workspace = true }
miden-objects         = { features = ["testing"], workspace = true }
miden-tx              = { features = ["testing"], workspace = true }
pretty_assertions     = "1.4"
rand_chacha           = { default-features = false, version = "0.9" }
serial_test           = "3.2"
tempfile              = { version = "3.5" }
tokio                 = { features = ["test-util"], workspace = true }
winterfell            = { version = "0.12" }
