[package]
description            = "Miden node's network transaction builder component"
edition.workspace      = true
homepage.workspace     = true
keywords               = ["miden", "node"]
license.workspace      = true
name                   = "miden-node-ntx-builder"
readme                 = "README.md"
repository.workspace   = true
rust-version.workspace = true
version.workspace      = true

[lints]
workspace = true

[dependencies]
anyhow                       = { workspace = true }
async-trait                  = { workspace = true }
futures                      = { workspace = true }
lru                          = { version = "0.14" }
miden-lib                    = { workspace = true }
miden-node-proto             = { workspace = true }
miden-node-utils             = { workspace = true }
miden-objects                = { workspace = true }
miden-proving-service-client = { features = ["tx-prover"], workspace = true }
miden-tx                     = { workspace = true }
rand                         = { features = ["thread_rng"], workspace = true }
thiserror                    = { workspace = true }
tokio                        = { features = ["full"], workspace = true }
tokio-stream                 = { workspace = true }
tonic                        = { workspace = true }
tower-http                   = { workspace = true }
tracing                      = { workspace = true }
url                          = { workspace = true }
[dev-dependencies]
miden-node-test-macro = { path = "../test-macro" }
