[package]
description            = "Miden node's network transaction builder component"
edition.workspace      = true
homepage.workspace     = true
keywords               = ["miden", "node"]
license.workspace      = true
name                   = "miden-node-ntx-builder"
readme                 = "README.md"
repository.workspace   = true
rust-version.workspace = true
version.workspace      = true

[lints]
workspace = true

[dependencies]
anyhow                     = { workspace = true }
async-trait                = { workspace = true }
futures                    = { workspace = true }
miden-node-proto           = { workspace = true }
miden-node-utils           = { workspace = true }
miden-objects              = { default-features = true, workspace = true }
miden-remote-prover-client = { features = ["tx-prover"], workspace = true }
miden-tx                   = { default-features = true, workspace = true }
rand                       = { workspace = true }
thiserror                  = { workspace = true }
tokio                      = { features = ["rt-multi-thread"], workspace = true }
tokio-stream               = { workspace = true }
tonic                      = { workspace = true }
tracing                    = { workspace = true }
url                        = { workspace = true }

[dev-dependencies]
miden-node-test-macro = { path = "../test-macro" }
