[package]
authors.workspace      = true
description            = "Client library for the Miden blockchain proving service"
edition.workspace      = true
keywords               = ["miden", "proving", "service"]
license.workspace      = true
name                   = "miden-proving-service-client"
readme                 = "README.md"
repository.workspace   = true
rust-version.workspace = true
version.workspace      = true

[lib]
crate-type = ["lib"]

[features]
batch-prover = ["dep:miden-objects", "dep:tokio"]
block-prover = ["dep:miden-objects", "dep:tokio"]
default      = ["std"]
std          = ["miden-objects/std", "miden-tx/std"]
tx-prover    = ["dep:miden-objects", "dep:tokio", "miden-tx/async"]

[target.'cfg(all(target_arch = "wasm32", target_os = "unknown"))'.dependencies]
getrandom             = { features = ["wasm_js"], version = "0.3" }
tonic                 = { default-features = false, features = ["codegen", "prost"], version = "0.12" }
tonic-web-wasm-client = { default-features = false, version = "0.6" }

[target.'cfg(not(all(target_arch = "wasm32", target_os = "unknown")))'.dependencies]
tonic = { default-features = false, features = [
  "codegen",
  "prost",
  "tls",
  "tls-native-roots",
  "transport",
], version = "0.12" }
tonic-web = { optional = true, version = "0.12" }

[lints]
workspace = true

[dependencies]
async-trait   = { version = "0.1" }
miden-objects = { optional = true, workspace = true }
miden-tx      = { optional = true, workspace = true }
prost         = { default-features = false, features = ["derive"], version = "0.13" }
thiserror     = { version = "2.0" }
tokio         = { default-features = false, features = ["sync"], optional = true, version = "1.44" }

[build-dependencies]
miette      = { features = ["fancy"], version = "7.5" }
prost       = { default-features = false, features = ["derive"], version = "0.13" }
prost-build = { version = "0.13" }
protox      = { version = "0.7" }
tonic-build = { version = "0.12" }
