[package]
authors.workspace      = true
description            = "Miden node's front-end RPC server"
edition.workspace      = true
homepage.workspace     = true
keywords               = ["miden", "node", "rpc"]
license.workspace      = true
name                   = "miden-node-rpc"
readme                 = "README.md"
repository.workspace   = true
rust-version.workspace = true
version.workspace      = true

[lints]
workspace = true

[dependencies]
anyhow           = { workspace = true }
futures          = { version = "0.3" }
http             = { workspace = true }
miden-node-proto = { workspace = true }
miden-node-utils = { workspace = true }
miden-objects    = { workspace = true }
miden-tx         = { workspace = true }
nom              = { version = "8.0" }
semver           = { version = "1.0" }
tokio            = { workspace = true, features = ["macros", "net", "rt-multi-thread"] }
tokio-stream     = { workspace = true, features = ["net"] }
tonic            = { workspace = true }
tonic-web        = { version = "0.12" }
tower            = { workspace = true }
tower-http       = { workspace = true, features = ["trace"] }
tracing          = { workspace = true }
url              = { workspace = true }

[dev-dependencies]
miden-node-rpc   = { workspace = true }
miden-node-store = { workspace = true }
miden-node-utils = { workspace = true, features = ["tracing-forest"] }
tempfile         = { version = "3.5" }
