[package]
authors.workspace      = true
description            = "Miden node's state store component"
edition.workspace      = true
homepage.workspace     = true
keywords               = ["miden", "node", "store"]
license.workspace      = true
name                   = "miden-node-store"
readme                 = "README.md"
repository.workspace   = true
rust-version.workspace = true
version.workspace      = true

[lints]
workspace = true

[dependencies]
anyhow                 = { workspace = true }
deadpool               = { default-features = false, features = ["managed", "rt_tokio_1"], version = "0.12" }
deadpool-sync          = { version = "0.1" }
hex                    = { version = "0.4" }
miden-lib              = { workspace = true }
miden-node-proto       = { workspace = true }
miden-node-proto-build = { features = ["internal"], workspace = true }
miden-node-utils       = { workspace = true }
miden-objects          = { workspace = true }
rand                   = { version = "0.9" }
rand_chacha            = { version = "0.9" }
rusqlite               = { features = ["array", "buildtime_bindgen", "bundled"], version = "0.36" }
rusqlite_migration     = { version = "2.2" }
serde                  = { features = ["derive"], version = "1" }
thiserror              = { workspace = true }
tokio                  = { features = ["fs", "rt-multi-thread"], workspace = true }
tokio-stream           = { features = ["net"], workspace = true }
toml                   = { version = "0.8" }
tonic                  = { workspace = true }
tonic-reflection       = { workspace = true }
tower-http             = { features = ["util"], workspace = true }
tracing                = { workspace = true }

[dev-dependencies]
assert_matches        = { workspace = true }
miden-lib             = { features = ["testing"], workspace = true }
miden-node-test-macro = { workspace = true }
miden-node-utils      = { features = ["tracing-forest"], workspace = true }
miden-objects         = { default-features = true, features = ["testing"], workspace = true }
regex                 = { version = "1.11" }
termtree              = { version = "0.5" }
