[package]
authors.workspace      = true
description            = "Miden node's shared utilities"
edition.workspace      = true
homepage.workspace     = true
keywords               = ["miden", "node", "utils"]
license.workspace      = true
name                   = "miden-node-utils"
readme                 = "README.md"
repository.workspace   = true
rust-version.workspace = true
version.workspace      = true

[lints]
workspace = true

[features]
# Enables depedencies intended for build script generation of version metadata.
vergen = ["dep:vergen", "dep:vergen-gitcl"]
# Enables utility functions for testing traces created by some other crate's stack.
testing = ["dep:tokio"]

[dependencies]
anyhow                = { workspace = true }
figment               = { version = "0.10", features = ["env", "toml"] }
http                  = { workspace = true }
itertools             = { workspace = true }
miden-objects         = { workspace = true }
opentelemetry         = { version = "0.29" }
opentelemetry-otlp    = { version = "0.29", default-features = false, features = ["grpc-tonic", "tls-roots", "trace"] }
opentelemetry_sdk     = { version = "0.29", features = ["rt-tokio", "testing"] }
rand                  = { workspace = true }
serde                 = { version = "1.0", features = ["derive"] }
tonic                 = { workspace = true }
tracing               = { workspace = true }
tracing-forest        = { version = "0.1", optional = true, features = ["chrono"] }
tracing-opentelemetry = { version = "0.30" }
tracing-subscriber    = { workspace = true }
url                   = { workspace = true }

# Optional dependencies enabled by `vergen` feature.
# This must match the version expected by `vergen-gitcl`.
vergen       = { "version" = "9.0", optional = true }
vergen-gitcl = { version = "1.0", features = ["cargo", "rustc"], optional = true }
# Optional dependencies enabled by `testing` feature.
tokio = { workspace = true, optional = true }
