[package]
authors.workspace      = true
description            = "Miden node's shared utilities"
edition.workspace      = true
homepage.workspace     = true
keywords               = ["miden", "node", "utils"]
license.workspace      = true
name                   = "miden-node-utils"
readme                 = "README.md"
repository.workspace   = true
rust-version.workspace = true
version.workspace      = true

[lints]
workspace = true

[features]
# Enables depedencies intended for build script generation of version metadata.
vergen = ["dep:vergen", "dep:vergen-gitcl"]
# Enables utility functions for testing traces created by some other crate's stack.
testing = ["dep:tokio"]

[dependencies]
anyhow                = { workspace = true }
figment               = { features = ["env", "toml"], version = "0.10" }
http                  = { workspace = true }
itertools             = { workspace = true }
miden-objects         = { workspace = true }
opentelemetry         = { version = "0.29" }
opentelemetry-otlp    = { default-features = false, features = ["grpc-tonic", "tls-roots", "trace"], version = "0.29" }
opentelemetry_sdk     = { features = ["rt-tokio", "testing"], version = "0.29" }
rand                  = { workspace = true }
serde                 = { features = ["derive"], version = "1.0" }
tonic                 = { workspace = true }
tracing               = { workspace = true }
tracing-forest        = { features = ["chrono"], optional = true, version = "0.1" }
tracing-opentelemetry = { version = "0.30" }
tracing-subscriber    = { workspace = true }
url                   = { workspace = true }

# Optional dependencies enabled by `vergen` feature.
# This must match the version expected by `vergen-gitcl`.
vergen       = { "version" = "9.0", optional = true }
vergen-gitcl = { features = ["cargo", "rustc"], optional = true, version = "1.0" }
# Optional dependencies enabled by `testing` feature.
tokio = { optional = true, workspace = true }
